# Brain2KG

./: .gitignore  README.md  basic_test.ipynb  create_kg.py  define_ontology_to_csv.py  docker-compose.yml  example1.ipynb  example2.ipynb  kg_pipeline.ipynb  neuro_test.ipynb  ontology_to_csv.py  pyproject.toml  run.py  test.ipynb
brain2kg/api/: database.py  main.py
brain2kg/text2kg/: aligner.py  definer.py  eda_pipeline.py  extractor.py
brain2kg/text2kg/utils/: llm_utils.py  text_utils.py
data/raw_text/: webnlg_dataset.txt
examples/outputs/: eda_output.txt
few_shot_examples/: oie_few_shot_examples.txt
ollama/: id_ed25519  id_ed25519.pub
ollama/ollama/: id_ed25519  id_ed25519.pub
prompt_templates/: oie_fsp_template.txt  oie_zsp_template.txt  sa_template.txt  sd_fsp_template.txt  sd_zsp_template.txt
