[tool.poetry]
name = "brain2kg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.8.1"
sentence-transformers = "^3.0.1"
numpy = "^2.0.1"
ollama = "^0.3.0"
matplotlib = "^3.9.1"
networkx = "^3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
